repository implemented and simple configuration

--- a/Web Api/Games4Trade/appsettings.json
+++ b/Web Api/Games4Trade/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=91.188.125.247;port=3306;database=KreatorGrafiku;user=kreatorGrafikuUser;password=ng9Cum3v;SslMode=none;Convert Zero Datetime=True"
+  }
 }
