remade structure and connected to postgresql

--- a/Web Api/Games4Trade/appsettings.json
+++ b/Web Api/Games4Trade/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=91.188.125.247;port=3306;database=KreatorGrafiku;user=kreatorGrafikuUser;password=ng9Cum3v;SslMode=none;Convert Zero Datetime=True"
+    "ApplicationContext": "Server=localhost;Port=5432; User Id=postgres; Password=admin; Database=Games4Trade"
   }
 }
