--- a/Client/Games4Trade/package.json
+++ b/Client/Games4Trade/package.json
@@ -18,6 +18,7 @@
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-sweetalert2": "^1.5.3",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
