many to many users model

--- a/Web Api/Games4Trade/Games4Trade.csproj
+++ b/Web Api/Games4Trade/Games4Trade.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Data\Migrations\20180908161727_many to many users.cs" />
+    <Compile Remove="Data\Migrations\20180908161727_many to many users.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
