--- a/Client/Games4Trade/package.json
+++ b/Client/Games4Trade/package.json
@@ -17,7 +17,9 @@
     "jwt-decode": "^2.2.0",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
+    "vue-loader": "^15.4.1",
     "vue-router": "^3.0.1",
+    "vue-spinner": "^1.0.3",
     "vue-sweetalert2": "^1.5.3",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
