--- a/Client/Games4Trade/package.json
+++ b/Client/Games4Trade/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^3.0.1",
     "vue-spinner": "^1.0.3",
     "vue-sweetalert2": "^1.5.3",
+    "vue-tabs-component": "^1.5.0",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
