--- a/Client/Games4Trade/package.json
+++ b/Client/Games4Trade/package.json
@@ -22,12 +22,13 @@
     "vue-spinner": "^1.0.3",
     "vue-sweetalert2": "^1.5.3",
     "vue-tabs-component": "^1.5.0",
+    "vuejs-paginator": "^2.0.2",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
-    "@vue/cli-plugin-e2e-nightwatch": "^3.0.1",
+    "@vue/cli-plugin-e2e-nightwatch": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.1",
     "@vue/cli-plugin-unit-jest": "^3.0.1",
     "@vue/cli-service": "^3.0.1",
