users photos working backend

--- a/Web Api/Games4Trade/Games4Trade.csproj
+++ b/Web Api/Games4Trade/Games4Trade.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="photos\**" />
+    <Content Remove="photos\**" />
+    <EmbeddedResource Remove="photos\**" />
+    <None Remove="photos\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Data\Migrations\20180908161727_many to many users.cs" />
     <Compile Remove="Data\Migrations\20180908161727_many to many users.Designer.cs" />
     <Compile Remove="Data\Migrations\20180909170818_consoles and regions.cs" />
