--- a/Client/Games4Trade/package.json
+++ b/Client/Games4Trade/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^2.2.0",
     "popper.js": "^1.14.4",
     "vue": "^2.5.17",
+    "vue-flux": "^5.1.4",
     "vue-loader": "^15.4.1",
     "vue-router": "^3.0.1",
     "vue-spinner": "^1.0.3",
