--- a/Web Api/Games4Trade/Properties/launchSettings.json
+++ b/Web Api/Games4Trade/Properties/launchSettings.json
@@ -26,6 +26,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/values",
+      "publishAllPorts": true
     }
   }
 }
