--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,16 @@ services:
       - postgres_data:/var/lib/postgres
       - ./dbscripts/postgres:/docker-entrypoint-initdb.d
   api:
+    depends_on:
+     - db
     build:
       context: "Web Api/Games4Trade"
       dockerfile: Dockerfile
     ports:
       - "5000:80"
-    environment: 
-      ConnectionStrings__DefaultConnection: Server=db;Port=5432; User Id=postgres; Password=admin; Database=Games4Trade;
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      ConnectionStrings__ApplicationContext: Server=db;Port=5432; User Id=postgres; Password=admin; Database=Games4Trade;
 
 volumes: 
   postgres_data:
