--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "5432:5432"
     environment: 
       POSTGRES_DB: Games4Trade
-      POSTGRES_PASSWORD: admin
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes: 
       - postgres_data:/var/lib/postgres
       - ./dbscripts/postgres:/docker-entrypoint-initdb.d
@@ -20,7 +20,7 @@ services:
       - "5000:80"
     environment:
       ASPNETCORE_ENVIRONMENT: Development
-      ConnectionStrings__ApplicationContext: Server=db;Port=5432; User Id=postgres; Password=admin; Database=Games4Trade;
+      ConnectionStrings__ApplicationContext: Server=db;Port=5432; User Id=${DB_USER}; Password=${DB_PASSWORD}; Database=Games4Trade;
   client:
     depends_on: 
       - api
