Fix signalR connection

--- a/Web Api/Games4Trade/appsettings.json
+++ b/Web Api/Games4Trade/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationContext": "Server=localhost;Port=5432; User Id=postgres; Password=admin; Database=Games4Trade"
+    "ApplicationContext": "Server=localhost;Port=5432; User Id=postgres; Password=3N}WsDD$sYy<v6HM; Database=Games4Trade"
   }
 }
