--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DB_USER=postgres
 DB_PASSWORD=3N}WsDD$sYy<v6HM
+MINIO_ACCESSKEY=Pq3HKxPsB9itOOu4JlszFDz1DpARtscr
+MINIO_SECRETKEY=qmKW1jtP1hK76lXoTTjvW6TsOjDRB8JD
