--- a/Web Api/Games4Trade/appsettings.json
+++ b/Web Api/Games4Trade/appsettings.json
@@ -1,11 +1,16 @@
 {
+  "ConnectionStrings": {
+    "ApplicationContext": "Server=localhost;Port=5432; User Id=postgres; Password=3N}WsDD$sYy<v6HM; Database=Games4Trade"
+  },
+  "MinIOConfig": {
+    "Address": "localhost:9000",
+    "AccessKey": "Pq3HKxPsB9itOOu4JlszFDz1DpARtscr",
+    "SecretKey": "qmKW1jtP1hK76lXoTTjvW6TsOjDRB8JD"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ApplicationContext": "Server=localhost;Port=5432; User Id=postgres; Password=3N}WsDD$sYy<v6HM; Database=Games4Trade"
-  }
+  "AllowedHosts": "*"
 }
