--- a/Web Api/Games4Trade/Games4TradeAPI.csproj
+++ b/Web Api/Games4Trade/Games4TradeAPI.csproj
@@ -7,6 +7,10 @@
     <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="photos\**" />
     <Content Remove="photos\**" />
